src/MiniDiscord.css
div.cmdContainer {
  display: flex;
  border-style: solid;
  border-width: 1.2px;
  border-color: #a19d89;
  border-radius: 0.7em;
  padding: 0.7em;
  min-width: 300px;
  height: 1.5em;
  align-content: center;
}

div.cmdFieldContainer {
  display: flex;
  border-bottom-left-radius: 0.4em;
  border-top-left-radius: 0.4em;
  min-width: 10px;
  padding: 0.25em;
  height: 1em;
  align-content: center;
  align-self: center;
}

div.cmdFieldContainer {
  display: flex;
  border-bottom-left-radius: 0.4em;
  border-top-left-radius: 0.4em;
  min-width: 10px;
  padding: 0.25em;
  height: 1em;
  align-content: center;
  align-self: center;
}

div.cmdFieldInputContainer {
  display: flex;
  border-bottom-right-radius: 0.4em;
  border-top-right-radius: 0.4em;
  width: 0.4em;
  padding: 0.25em;
  height: 1em;
  align-content: center;
  align-self: center;
}

img.botIcon {
  border-radius: 100%;
  max-width: 100%;
  max-height: 100%;
  align-self: center;
  padding-left: 0.2em;
}

p.cmdName {
  align-self: center;
  padding-inline: 1em;
  margin-block-start: 0;
  margin-block-end: 0;
}

p.cmdField {
  font-size: medium;
  align-self: center;
  padding-inline: 0.3em;
  margin-block-start: 0;
  margin-block-end: 0;
}

